@@ -4,6 +4,7 @@ Version 0.6. -
 - New: implemented callback functionality to GridView items
 - New: implemented CSS classes for headers and rows in GridView
 - New: added sorting links to table column headers
+- New: added possibility to wrap table in responsive DIV
 - Enh: added test for DataGrid Message
 
 
